# Paskar-JobNotify

./: .gitignore  Dockerfile  README.md  app.py  commands.py  config.py  docker-compose.yml  keyboards.py  pyproject.toml  run.sh  safecalls.py  test.sh
translations/: ru.yml  ua.yml
